--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
  <ul>
 	    <li><a href="#"> Resumo </a></li>
             <li><a href="#"> Horario </a></li>
+            <li><a href="{{url_for('rm.home')}}"> RM </a></li>
 	    <li><a href="{{url_for('faltas.home')}}"> Faltas Programadas </a></li>
             <li><a> Lista Piloto </a>
                 <ul class="sub">
