Criado campo de pesquisa para o RM

--- a/templates/rm.html
+++ b/templates/rm.html
@@ -12,6 +12,8 @@
         <input type="text" name="nomeForm" id="nomeForm" placeholder="Nome do Aluno">
         <input type="submit" value="Adicionar">
     </form>
+
+    <input type="search" name="busca" id="busca" placeholder="Digite um nome ou RM para pesquisar" oninput="Buscar()">
     <section>
         <table>
             <thead>
